packages/typ/tests/fixtures/diagnostics/0446_modules_nested_value_mismatch_04.ml.expected
File "0446_modules_nested_value_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0446_modules_nested_value_mismatch_04 is not a valid module name.

File "0446_modules_nested_value_mismatch_04.ml", lines 5-9, characters 6-3:
5 | ......struct
6 |   module Inner = struct
7 |     let x = 3
8 |   end
9 | end
Error: Signature mismatch:
       Modules do not match:
         sig module Inner : sig val x : int end end
       is not included in
         sig module Inner : sig val x : bool end end
       In module Inner:
       Modules do not match:
         sig val x : int end
       is not included in
         sig val x : bool end
       In module Inner:
       Values do not match: val x : int is not included in val x : bool
       The type int is not compatible with the type bool
       File "0446_modules_nested_value_mismatch_04.ml", line 3, characters 4-16:
         Expected declaration
       File "0446_modules_nested_value_mismatch_04.ml", line 7, characters 8-9:
         Actual declaration
