packages/typ/tests/fixtures/diagnostics/0446_modules_nested_value_mismatch_04.ml
module Q : sig
  module Inner : sig
    val x : bool
  end
end = struct
  module Inner = struct
    let x = 3
  end
end
